--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=sendgrid
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
