--- a/.env
+++ b/.env
@@ -8,22 +8,22 @@ LOG_CHANNEL=stack
 
 #LOCAL
 DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=mycrib
-#DB_USERNAME=root
-#DB_PASSWORD=
-#SENDER_EMAIL=thisgeekcodes@gmail.com
-SENDER_EMAIL=info@myycrib.com.ng
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=mycrib
+DB_USERNAME=root
+DB_PASSWORD=
+SENDER_EMAIL=thisgeekcodes@gmail.com
+#SENDER_EMAIL=info@myycrib.com.ng
 
 #LIVE
 #DB_CONNECTION=mysql
 #
-DB_HOST=us-cdbr-iron-east-05.cleardb.net
-DB_PORT=3306
-DB_DATABASE=heroku_1bcfa1ca7ae8171
-DB_USERNAME=be40fb8ceab750
-DB_PASSWORD=1cf126ae
+#DB_HOST=us-cdbr-iron-east-05.cleardb.net
+#DB_PORT=3306
+#DB_DATABASE=heroku_1bcfa1ca7ae8171
+#DB_USERNAME=be40fb8ceab750
+#DB_PASSWORD=1cf126ae
 #SENDER_EMAIL=info@Myyinvest.com.ng
 
 
