--- a/.env
+++ b/.env
@@ -2,19 +2,19 @@ APP_NAME=MyCrib
 APP_ENV=local
 APP_KEY=base64:nUpHii2X/9X3SLZhyQPQjQHJBtPw9Hbb/eUbT77ZyEI=
 APP_DEBUG=true
-#APP_URL=http://localhost
-APP_URL=https://mycribbi.herokuapp.com
+APP_URL=http://localhost
+#APP_URL=https://mycribbi.herokuapp.com
 LOG_CHANNEL=stack
 
 #LOCAL
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mycrib
-DB_USERNAME=root
-DB_PASSWORD=
-SENDER_EMAIL=thisgeekcodes@gmail.com
-#SENDER_EMAIL=info@myycrib.com.ng
+DB_DATABASE=myycrib1_myyinvest
+DB_USERNAME=myycrib1_mayorwa
+DB_PASSWORD=53CR3Tdave95*
+#SENDER_EMAIL=thisgeekcodes@gmail.com
+SENDER_EMAIL=info@myycrib.com.ng
 
 #LIVE
 #DB_CONNECTION=mysql
