--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+DirectoryIndex index.php
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
@@ -15,5 +17,6 @@
     RewriteRule ^ index.php [L]
 
     # Handle Authorization Header
-    RewriteC
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
